Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dic-don-game-service
spec:
  selector:
    app: dic-don-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000  # Should match your containerPort
  type: NodePort
