Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dic-don-game-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dicdon-game.local  # Replace with your actual domain if using Ingress
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dic-don-game-service
                port:
                  number: 80
